Fooling around with lumen's route/controllers. But most importantly, urgent update to api docs
